Change HygieiaUtils.smartUrlEquals to use URI internally since java doesn't understand ssh by default; fix subdomain comparison